--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.mit.com.hustlers.lawyered.View.Activity.SignIn">
+        <activity android:name="com.mit.law.view.activity.SignIn">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.mit.law.view.fragments.fragment_laws"></activity>
+        <activity android:name="com.mit.law.view.activity.Home"></activity>
     </application>
 
 </manifest>
