--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:name="com.mit.law.view.activity.Home"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
 
-        <activity android:name="com.mit.law.view.activity.clicks_on_law_dialog"
+        <activity android:name="com.mit.law.view.activity.Clicks_on_law_dialog"
             android:theme="@style/Theme.AppCompat.Light.Dialog"/>
     </application>
 
