--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,11 @@
         </activity>
         <activity
             android:name="com.mit.law.view.activity.Home"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
-
-        <activity android:name="com.mit.law.view.activity.Clicks_on_law_dialog"
-            android:theme="@style/Theme.AppCompat.Light.Dialog"/>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name="com.mit.law.view.activity.Clicks_on_law_dialog"
+            android:theme="@style/Theme.AppCompat.Light.Dialog" />
+        <activity android:name="com.mit.law.view.activity.Clicks_on_notification"></activity>
     </application>
 
 </manifest>
