--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity android:name="com.mit.law.view.activity.LawDetailsActivity" />
         <activity android:name="com.mit.law.view.activity.ProfileDetailsActivity"/>
         <activity android:name="com.mit.law.view.activity.Rate_lawyer" android:theme="@style/Theme.AppCompat.Light.Dialog"/>
-        
+        <activity android:name="com.mit.law.view.activity.LocationRulesActivity"/>
 
     </application>
 
